--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "firebase": "^10.12.4",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.12",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
     "zone.js": "~0.14.2"
