ui changes and stats page created

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Paisa",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "",
+  "homepage": "",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -29,13 +29,17 @@
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/splash-screen": "^6.0.2",
     "@capacitor/status-bar": "6.0.0",
+    "@cloudinary/ng": "^2.0.2",
+    "@cloudinary/url-gen": "^1.21.0",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "@ngrx/store": "^18.0.1",
     "@ngrx/store-devtools": "^18.0.1",
     "capacitor-sms-inbox": "^1.1.1",
+    "echarts": "^5.5.1",
     "firebase": "^10.12.4",
     "ionicons": "^7.0.0",
+    "ngx-echarts": "^18.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.12",
     "tslib": "^2.3.0",
