--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "@ngrx/store": "^18.0.1",
     "@ngrx/store-devtools": "^18.0.1",
     "capacitor-sms-inbox": "^1.1.1",
-    "echarts": "^5.5.1",
+    "chart.js": "^4.4.4",
     "firebase": "^10.12.4",
     "ionicons": "^7.0.0",
-    "ngx-echarts": "^18.0.0",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.12",
     "tslib": "^2.3.0",
